tests/snapshots/examples_fixtures/type_system__failing__29_strict_missing_main.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/29_strict_missing_main.flx
== compile ==
error
== diagnostics ==
• 1 error • examples/type_system/failing/29_strict_missing_main.flx
error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  examples/type_system/failing/29_strict_missing_main.flx:25:1
   |
25 | fn inc(x: Int) -> Int {
   | ^^^^^^^^^^^^^^^^^^^^^^^
26 |     x + 1
   | ^^^^^^^^^
27 | }
   | ^

Hint:
  Add `fn main() { ... }` as the program entrypoint.
== stdout ==
<not executed>
